Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt
QTBUG-71032
[REG] After removal of Q_PRIVATE_SLOTs several connects are invalid on macOS
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Done
Priority:
P1: Critical
Fix Version/s:
5.12.0 Beta 2
Affects Version/s:
5.12
Component/s:
Connectivity: Bluetooth
Labels:
None
Platform/s:
macOS
Commits:
b65d9a863dd9831e9f3a55e60c9ec899392dd489 (qt/qtconnectivity/5.12)
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Alex Blasche
Reporter:
Timur Pocheptsov
Votes:
0
Vote for this issue
Watchers:
1
Start watching this issue
Dates
Created:
09 Oct '18 10:38
Updated:
09 Oct '18 14:21
Resolved:
09 Oct '18 14:21
Gerrit Reviews
There are no open Gerrit changes
Show
There are 2 closed Gerrit changes
Hide
There are 2 closed Gerrit changes
Fix QObject::connect warnings due to removed Q_PRIVATE_SLOT instances
Gerrit Review:
Fix QObject::connect warnings due to removed Q_PRIVATE_SLOT instances
Gerrit Review: