Fix QObject::connect warnings due to removed Q_PRIVATE_SLOT instances

This fixes a regression introduced by 819bb06c2cb3372cb1bb9ddd7f3a504f78d3452d
on macOS.

Fixes: QTBUG-71032
Change-Id: I34a0325f89049bce86b5137ee722f6f063a4b882
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>